--- a/README
+++ b/README
@@ -12,13 +12,15 @@ Example
 
 1) Generate initialization class, migration, controllers, and tests:
 
-       ./script/generate activity_streams User
+       rails generate activity_streams User
 
 The only option is the name of the model that holds your User.
 
 2) Add the Routes, in routes.rb
 
-   map.activity_streams
+     resources :activity_stream_preferences
+     resources :activity_streams
+
 
 3) Run the migration
 
@@ -114,84 +116,8 @@ The arguments for log activity stream are
     or method.
 
 
-7) Display a stream in one of your views. For example, from 
-./app/views/users/show.html.erb:
-   <h3>Recent Activity</h3>
-
-   <div class="hfeed">
-
-   <%= render :partial => 'activity_streams/activity_stream', :collection => ActivityStream.recent_actors(@user, activity_stream_location)  %>
-
-   </div> <!-- hfeed -->
-
-8) Define the required methods.  The plug-in needs to know the current logged in user and if that user is an admin.   So the following methods must be defined.
-
-  a) The User model needs an "admin?" method
-
-  b) The controller need a "current_user" controller and helper method
-
-  c) The controller needs "logged_in?" controller and helper method
-
-  d) Finally, either the generated controllers need to be modified
-  or a login_required and admin_required methods must be written for
-  the controllers.
-
-Except for the admin methods above, restful_authentication defines
-all these methods for us.
-http://agilewebdevelopment.com/plugins/restful_authentication
-
-8) Activities should now be logging.  You should be able to generate
-and view activities now.  A good interactive test is to play with the
-preferences and atom feed found here:
-
-    http://localhost:3000/activity_stream_preferences
-
-9) Fix the generated tests and add new ones. Activity streams
-generator generates unit, controller, and integration tests.  These
-tests will need to be fixed as your fixtures will be different than
-the ones provided.
-
-Finally, you should write some tests for your controllers where you add your
-activities.  For example:
-    class FeedsControllerTest < ActionController::TestCase
-      #...
-
-      def test_follow_creator_generates_activity
-        login_as :fred
-          assert_difference('ActivityStream.count', +1) do
-          post :set_my_feeds, :id => 1, :creators => ['1'], :feed_digest_option => 'daily'
-        end
-      end
-
-      def test_follow_category_generates_activity
-        login_as :fred
-          assert_difference('ActivityStream.count', +1) do
-          post :set_my_feeds, :id => 1, :categories => ['1'], :feed_digest_option => 'daily'
-        end
-      end
-
-      def test_follow_three_generates_three_activities
-        login_as :fred
-          assert_difference('ActivityStream.count', +3) do
-          post :set_my_feeds, :id => 1, :categories => ['1'], :creators => ['2','3'], :feed_digest_option => 'daily'
-        end
-      end
-
-      def test_follow_creator_activity_has_correct_data
-        login_as :fred
-
-        post :set_my_feeds, :id => 1, :creators => ['1'], :feed_digest_option => 'daily'
-        activity = ActivityStream.find(:last)
-
-        assert_equal(activity.object_id, 1)
-        assert_equal(activity.object_type, 'Creator')
-        assert_equal(activity.actor_id, users(:fred).id)
-        assert_equal(activity.actor_type, 'User')
-        assert_equal(activity.verb, 'now_follows')
-      end
-
-You should be able to modify the views by copying the view directorys from 
-the plugin into your app/views directory.
-
-Copyright (c) 2008 Matson Systems, Inc.
+Copyright (c) 2010 CoffeeBanana
 Released under the BSD license found in the file LICENSE
+
+based on wonderful piece of work from:
+Matson Systems, Inc.
